--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yuanhong (Claire) Zhang
 description: > 
    Claire' Data Science Projects Portfolio
    <br><br>
-   Here you will find how I solve problems using Data and Analytics
+   Welcome to connect!
    <br><br>
    <a href="https://www.linkedin.com/in/yuanhongzhang/">LinkedIn 
 
